// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Logo component applies custom className 1`] = `
<div>
  <a
    class="text-lg font-bold text-red-500"
    href="/"
  >
    Travelsy
  </a>
</div>
`;

exports[`Logo component renders with custom text 1`] = `
<div>
  <a
    class="text-lg font-bold"
    href="/"
  >
    MyLogo
  </a>
</div>
`;

exports[`Logo component should render correctly 1`] = `
<div>
  <a
    class="text-lg font-bold"
    href="/"
  >
    Travelsy
  </a>
</div>
`;
